backend/internal/architecture/testdata/invalid/internal/modules/nestedshape/internal/domain/module.go
package domain

// Module must not satisfy the module-root module.go requirement.
type Module struct{}
